# sh-new-dept-score

./: CHANGELOG.md  Dockerfile  app.py  pyproject.toml  readme.md
tests/: test_dataclass.py
